<resources>
    <string name="app_name">trinity</string>

    <string name="rate_very_slow">Ext slow</string>
    <string name="rate_slow">slow</string>
    <string name="rate_standard">Normal</string>
    <string name="rate_fast">fast</string>
    <string name="rate_very_fast">Ext fast</string>

    <string-array name="preview_render_preference">
        <item>FIT</item>
        <item>CROP</item>
    </string-array>

    <string-array name="preview_render_value_preference">
        <item>"FIT"</item>
        <item>"CROP"</item>
    </string-array>

    <string-array name="preview_resolution">
        <item>1080P</item>
        <item>720P</item>
    </string-array>

    <string-array name="record_resolution">
        <item>1080P</item>
        <item>720P</item>
        <item>540P</item>
        <item>480P</item>
        <item>360P</item>
    </string-array>

    <string-array name="frame_rate">
        <item>30</item>
        <item>25</item>
        <item>24</item>
        <item>20</item>
        <item>15</item>
    </string-array>

    <string-array name="channels">
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="sample_rate">
        <item>48000</item>
        <item>44100</item>
        <item>22050</item>
    </string-array>

    <string name="filter">Filter</string>
    <string name="music">Music</string>
    <string name="gif">GIF</string>
    <string name="subtitle">Subtitle</string>
    <string name="mv">MV</string>
    <string name="sound">Sound effect</string>
    <string name="effect">Special effects</string>
    <string name="speed_time">Variable speed</string>
    <string name="transition">Transitions</string>
    <string name="paint">Graffiti</string>
    <string name="cover">Cover</string>
    <string name="smoother">Microdermabrasion</string>
    <string name="effect_tip">After choosing a location, Press and hold to use effect</string>
    <string name="undo">Undo</string>
    <string name="split_screen">Split Screen</string>
    <string name="dream">dream</string>
    <string name="dynamic">Dynamic</string>

    <string name="caption_effect_font_category_name">Plain text</string>
    <string name="caption_effect_bottom_keyboard">Keyboard</string>
    <string name="caption_effect_bottom_color">Colour</string>
    <string name="caption_effect_bottom_font">Font</string>
    <string name="caption_effect_bottom_animation">Special effects</string>
    <string name="text_count_outof">Word count exceeds limit</string>
    <string name="subtitle_text_color">Filling</string>
    <string name="subtitle_text_stroke">Stroke</string>
</resources>
